# sitegen

./: .gitignore  Cargo.toml  README.md
.fleet/: run.json
articles/: Hello World.cn.md  Hello World.en.md  Hello World.md  routes.toml
src/: articles.rs  git.rs  log.rs  main.rs  routes.rs
