[package]
authors = ["He Li"]
edition = "2021"
name = "sitegen"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.62", features = ["backtrace"] }
clap = "3.2.16"
colorful = "0.2.1"
git2 = "0.15.0"
indicatif = "0.17.0"
minify-html = "0.9.2"
ravif = "0.8.9"
serde = { version = "1.0.144", features = ["derive"] }
toml = "0.5.9"
# libvips = "1.4.3"
